--- a/src/assets/css/product.css
+++ b/src/assets/css/product.css
@@ -196,6 +196,7 @@
   .accessory-list .main .name {
     height: auto;
     min-height: 50px;
+    line-height: 50px;
   }
 
   .accessory-list .main .btn-area {
